--- a/app/src/main/res/layout/list_view_shoes.xml
+++ b/app/src/main/res/layout/list_view_shoes.xml
@@ -8,9 +8,11 @@
 
     <View
         android:id="@+id/viewProduct"
-        android:layout_width="400dp"
+        android:layout_width="0dp"
         android:layout_height="100dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
         android:background="@drawable/shape_view"
         android:backgroundTint="#252525"
         app:layout_constraintEnd_toEndOf="parent"
