--- a/app/src/main/res/layout/add_product_activity.xml
+++ b/app/src/main/res/layout/add_product_activity.xml
@@ -73,7 +73,7 @@
         android:textColorHint="#9E9E9E"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtProductName" />
+        app:layout_constraintTop_toBottomOf="@+id/edtNameEdit" />
 
     <EditText
         android:id="@+id/edtPrice"
@@ -95,7 +95,7 @@
         app:layout_constraintTop_toBottomOf="@+id/edtDescription" />
 
     <EditText
-        android:id="@+id/edtProductName"
+        android:id="@+id/edtNameEdit"
         android:layout_width="347dp"
         android:layout_height="60dp"
         android:layout_marginStart="32dp"
@@ -151,7 +151,7 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginStart="32dp"
-        app:layout_constraintBottom_toTopOf="@+id/edtProductName"
+        app:layout_constraintBottom_toTopOf="@+id/edtNameEdit"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:layout_constraintVertical_bias="0.484"
