--- a/app/src/main/res/layout/edit_product_activity.xml
+++ b/app/src/main/res/layout/edit_product_activity.xml
@@ -69,9 +69,9 @@
         android:inputType="textPersonName"
         android:paddingLeft="20dp"
         android:textColorHint="#9E9E9E"
-        app:layout_constraintEnd_toEndOf="@+id/edtProductName"
-        app:layout_constraintStart_toStartOf="@+id/edtProductName"
-        app:layout_constraintTop_toBottomOf="@+id/edtProductName" />
+        app:layout_constraintEnd_toEndOf="@+id/edtNameEdit"
+        app:layout_constraintStart_toStartOf="@+id/edtNameEdit"
+        app:layout_constraintTop_toBottomOf="@+id/edtNameEdit" />
 
     <EditText
         android:id="@+id/edtPrice"
@@ -90,7 +90,7 @@
         app:layout_constraintTop_toBottomOf="@+id/edtDescription" />
 
     <EditText
-        android:id="@+id/edtProductName"
+        android:id="@+id/edtNameEdit"
         android:layout_width="347dp"
         android:layout_height="60dp"
         android:layout_marginTop="32dp"
