--- a/app/src/main/res/layout/list_view_shoes.xml
+++ b/app/src/main/res/layout/list_view_shoes.xml
@@ -67,8 +67,8 @@
 
     <TextView
         android:id="@+id/tvProductPrice"
-        android:layout_width="60dp"
-        android:layout_height="wrap_content"
+        android:layout_width="90dp"
+        android:layout_height="31dp"
         android:layout_marginEnd="16dp"
         android:text="1289"
         android:textColor="#F43F5E"
