--- a/app/src/main/res/layout/edit_product_activity.xml
+++ b/app/src/main/res/layout/edit_product_activity.xml
@@ -68,6 +68,7 @@
         android:hint="Description"
         android:inputType="textPersonName"
         android:paddingLeft="20dp"
+        android:textColor="#FFFFFF"
         android:textColorHint="#9E9E9E"
         app:layout_constraintEnd_toEndOf="@+id/edtNameEdit"
         app:layout_constraintStart_toStartOf="@+id/edtNameEdit"
@@ -84,6 +85,7 @@
         android:hint="Price"
         android:inputType="textPersonName"
         android:paddingLeft="20dp"
+        android:textColor="#FFFFFF"
         android:textColorHint="#9E9E9E"
         app:layout_constraintEnd_toEndOf="@+id/edtDescriptionEdit"
         app:layout_constraintStart_toStartOf="@+id/edtDescriptionEdit"
@@ -100,6 +102,7 @@
         android:hint="Name"
         android:inputType="textPersonName"
         android:paddingLeft="20dp"
+        android:textColor="#FFFFFF"
         android:textColorHint="#9E9E9E"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
